[package]
name = "hydrogen"
version = "0.1.0"
edition = "2021"
authors = ["Quozul"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
env_logger = "0.10.0"
handlebars = "4.3.7"
log = "0.4.17"
markdown = "0.3.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
