[package]
name = "hydrogen"
version = "0.1.0"
edition = "2021"
authors = ["Quozul"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
env_logger = "0.10.0"
grass = { version = "0.12.4", default-features = false }
handlebars = { version = "4.3.7", features = ["rhai", "script_helper"] }
log = "0.4.17"
markdown = "1.0.0-alpha.9"
regex = "1.8.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
toml = "0.7.4"
